[package]
authors = ["Mikkel Kroman <mk@uplink.io>"]
name = "syndicator"
version = "0.1.0"

[[bin]]
doc = false
name = "syndicator"

[dependencies]
app_dirs = "1.1"
clap = "2.19"
env_logger = "0.3"
hyper = "0.9"
lazy_static = "0.2"
chrono = "0.2"
log = "0.3"
mio = "0.6"
quick-error = "1.1"
rss = "0.4"
rusqlite = "0.7"
serde = "0.8"
serde_derive = "0.8"
time = "0.1"
atom_syndication = "0.3"

[dependencies.toml]
version = "0.2"
features = ["serde"]
